# chat-history-analyzer

./: .gitignore  README.md  WEB_GUIDE.md  analysis_report.txt  analyzer.py  chat.py  parser.py  pyproject.toml  requirements.txt  run_web.py
data/: sample_chat.txt
src/chat_analyzer/: __init__.py  analyzer.py  app.py  cli.py  main.py  parser.py
src/chat_analyzer/static/: script.js  style.css
src/chat_analyzer/templates/: index.html
tests/: test_analyzer.py
